--- a/v2/index.html
+++ b/v2/index.html
@@ -3,9 +3,9 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="%BASE_URL%favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Music Score Tool V2</title>
+    <title>Clefarity V2</title>
 </head>
 
 <body>
